# paperless-review-companion

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  paperless-setup.md  privacy.md  roadmap.md
sample_data/: demo_documents.jsonl
src/paperless_review_companion/: __init__.py  cli.py  client.py  constants.py  manifest.py  renderers.py  review.py  writeback.py
tests/: test_manifest.py  test_renderers.py  test_review.py  test_writeback.py
