[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperless-review-companion"
version = "0.1.0"
description = "Manifest-first local-model review and triage for Paperless-ngx archives"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Yurii Bakurov" }]
keywords = ["paperless-ngx", "ollama", "document-management", "local-first", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business",
  "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Yurii201811/paperless-review-companion"
Repository = "https://github.com/Yurii201811/paperless-review-companion"
Issues = "https://github.com/Yurii201811/paperless-review-companion/issues"
Changelog = "https://github.com/Yurii201811/paperless-review-companion/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
paperless-review = "paperless_review_companion.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
